# BETA

./: pyproject.toml
DZ1beta/: README.md  pyproject.toml
DZ1beta/src/: widget.py
data/: config.py
log/: mylog.txt  test.txt
src/: decorators.py  generators.py  logger.py  masks.py  processing.py  reading.py  utils.py  widget.py
tests/: test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
