[tool.poetry]
name = "dz1beta"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"


[tool.poetry.group.lint.dependencies]
black = "^23.10.0"
mypy = "^1.6.1"
flake8 = "^6.1.0"
isort = "^5.12.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[[tool.mypy.overrides]]
module = [
    "masks"
]
ignore_missing_imports = true